# opfuncs

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  requirements-dev.txt  setup.cfg  setup.py  tox.ini
opfuncs/: __init__.py  _opfunc.py
tests/: opfuncs_test.py
