[metadata]
name = opfuncs
version = 1.0.0
description = A package to enable the usage of operators on python functions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github/sqrtdan/opfuncs
author = sqrtdan
author_email = sqrtdan@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:

[options.packages.find]
exclude = tests*
