[metadata]
name = opfuncs
version = 1.0.1
description = A package to enable the usage of operators on python functions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sqrtdan/opfuncs
author = sqrtdan
author_email = sqrtdan@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_requires = >=3.10

[options.packages.find]
exclude = tests*
